# RedNode-OS-Demo

./: .env.example  .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml
agents/automation-agent/: package.json
agents/browser-agent/: package.json
agents/coding-agent/: package.json
agents/comms-agent/: package.json
agents/endpoint-agent/: package.json  tsconfig.json
agents/home-agent/: package.json
agents/infra-agent/: package.json  tsconfig.json
agents/learning-agent/: package.json  tsconfig.json
agents/media-agent/: package.json  tsconfig.json
agents/network-agent/: package.json
agents/productivity-agent/: package.json  tsconfig.json
agents/research-agent/: package.json
agents/security-agent/: package.json
agents/shared/: package.json
agents/signal-bot/: package.json
agents/social-agent/: package.json
agents/storage-agent/: package.json
agents/surveillance-agent/: package.json
agents/system-agent/: package.json
core/rednode-core/: Cargo.toml  Dockerfile
core/rednode-core/src/: api.rs  auth.rs  bus.rs  coordinator.rs  events.rs  evolution.rs  executor.rs  goap.rs  init.rs  intent_router.rs  lib.rs  main.rs  memory.rs  memory_optimizer.rs  notifications.rs  pii.rs  pipelines.rs  planner.rs  predict.rs  security.rs  sentience.rs
core/rednode-core/tests/: integration_test.rs
deployment/: docker-compose.yml  frigate.yml  mosquitto.conf
docs/: FAQ.md  HARDWARE-GUIDE.md  HOME-INFRASTRUCTURE.md  JOURNEY.md  NETWORK-ARCHITECTURE.md  PRE-DEPLOY-REVIEW.md  START-HERE.md  STATUS-AND-ROADMAP.md
docs/guides/: BUILD-APK.md  BUILD-ISO.md  BUILD-WINDOWS-APP.md  DEPLOYMENT-FLOW.md  FINETUNE-LLM.md  NETWORK-SECURITY-SETUP.md
interfaces/cli/: package.json
interfaces/desktop/src-tauri/: Cargo.toml  tauri.conf.json
interfaces/desktop/src-tauri/src/: lib.rs
scripts/: bootstrap.sh  endpoint-install-linux.sh  endpoint-install-windows.ps1  rednode-build-iso.sh  rednode-export.sh  rednode-hardware-detect.sh  rednode-import.sh  rednode-selfheal.sh  rednode-verify.sh  setup-first-boot.sh  sign-iso.sh  start-all.sh
secrets/: .sops.yaml  README.md  rednode.secrets.enc.yaml
(+103 files in other folders)
