[package]
name = "rednode-core"
version = "0.5.1"
edition = "2021"
description = "RedNode-OS Central Nervous System"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
async-nats = "0.35"
futures = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
qdrant-client = "1.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing-opentelemetry = "0.24"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
sha2 = "0.10"
regex = "1.10"
scopeguard = "1.2"
sysinfo = "0.30"
gethostname = "0.4"

# Knowledge Graph – Kuzu – embedded, Apache-2.0 – optional
kuzu = { version = "0.4", optional = true }

# RedNode-OS init – PID1 – optional
nix = { version = "0.28", features = ["mount", "signal", "process", "reboot", "fs"], optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
init = ["dep:nix", "dep:libc"]
kuzu = ["dep:kuzu"]

[[bin]]
name = "rednode-core"
path = "src/main.rs"

[[bin]]
name = "rednode-init"
path = "src/init.rs"
required-features = ["init"]

[dev-dependencies]
tokio = { version = "1.38", features = ["test-util", "macros", "rt-multi-thread"] }
serde_json = "1.0"
