[package]
name = "rednode-desktop"
version = "0.2.0"
edition = "2021"
[lib]
name = "rednode_desktop"
crate-type = ["cdylib","staticlib"]
[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
[features]
default = [ "tauri/default" ]
